Added itemComment route
